change size of photos in the galerry

--- a/gallery.html
+++ b/gallery.html
@@ -38,21 +38,21 @@
 
 
     <section id="image">
-        <img src="assets/images/Athy.jpg" alt="Athy Primary Care Centre, Co. Kildare">
-        <img src="assets/images/Baltinglass.jpg" alt="Baltinglass Primary Care Centre, Co.Wicklow">
-        <img src="assets/images/Banagher.jpg" alt="Banagher Primary Care Centre, Co. Offaly">
-        <img src="assets/images/Bray.jpeg" alt="Bray Primary Care Centre, Co. Wicklow">
-        <img src="assets/images/Carrigaline.jpg" alt="Carrigaline Primary Care Centre, Co. Cork">
-        <img src="assets/images/celbridge.jpg" alt="Celbridge Primary Care, Co. Kildare">
-        <img src="assets/images/enniscorthy.jpg" alt="Enniscorthy Primary Care Centre, Co. Wexford">
-        <img src="assets/images/mallow.jpg" alt="Mallow Primary Care Centre, Co. Cork">
-        <img src="assets/images/meath.png" alt="The Meath Primary Care, Dublin">
-        <img src="assets/images/Mulingar.jpg" alt="Mullingar Primary Care Centre, Co. Westmeath">
-        <img src="assets/images/NavanRd.jpg" alt="Navan Road Primary Care Centre, Dublin">
-        <img src="assets/images/Newbridge.png" alt="Newbridge Primary Care, Co. Kildare">
-        <img src="assets/images/Rialto.jpeg" alt="Rialto Primary Care Centre, Dublin">
-        <img src="assets/images/Shankill.png" alt="Shankill Primary Care Centre, Co. Dublin">
-        <img src="assets/images/Tipperary.jpg" alt="Tipperary Primary Care Centre, Co. Tipperary">
+        <img src="assets/images/AthyS.jpg" alt="Athy Primary Care Centre, Co. Kildare">
+        <img src="assets/images/BaltinglassS.jpg" alt="Baltinglass Primary Care Centre, Co.Wicklow">
+        <img src="assets/images/BanagherS.jpg" alt="Banagher Primary Care Centre, Co. Offaly">
+        <img src="assets/images/BrayS.jpg" alt="Bray Primary Care Centre, Co. Wicklow">
+        <img src="assets/images/CarrigalineS.jpg" alt="Carrigaline Primary Care Centre, Co. Cork">
+        <img src="assets/images/CelbridgeS.jpg" alt="Celbridge Primary Care, Co. Kildare">
+        <img src="assets/images/enniscorthyS.jpg" alt="Enniscorthy Primary Care Centre, Co. Wexford">
+        <img src="assets/images/MallowS.jpg" alt="Mallow Primary Care Centre, Co. Cork">
+        <img src="assets/images/MeathS.png" alt="The Meath Primary Care, Dublin">
+        <img src="assets/images/MulingarS.jpg" alt="Mullingar Primary Care Centre, Co. Westmeath">
+        <img src="assets/images/NavanRdS.jpg" alt="Navan Road Primary Care Centre, Dublin">
+        <img src="assets/images/NewBridgeS.png" alt="Newbridge Primary Care, Co. Kildare">
+        <img src="assets/images/RialtoS.jpg" alt="Rialto Primary Care Centre, Dublin">
+        <img src="assets/images/ShanhillS.png" alt="Shankill Primary Care Centre, Co. Dublin">
+        <img src="assets/images/TipperaryS.jpg" alt="Tipperary Primary Care Centre, Co. Tipperary">
     </section>
     
     <footer>
