changes to style and media q

--- a/gallery.html
+++ b/gallery.html
@@ -46,16 +46,16 @@
         <img src="assets/images/CelbridgeS.jpg" alt="Celbridge Primary Care, Co. Kildare">
         <img src="assets/images/enniscorthyS.jpg" alt="Enniscorthy Primary Care Centre, Co. Wexford">
         <img src="assets/images/MallowS.jpg" alt="Mallow Primary Care Centre, Co. Cork">
-        <img src="assets/images/MeathS.png" alt="The Meath Primary Care, Dublin">
+        <img src="assets/images/MeathS.jpg" alt="The Meath Primary Care, Dublin">
         <img src="assets/images/MulingarS.jpg" alt="Mullingar Primary Care Centre, Co. Westmeath">
         <img src="assets/images/NavanRdS.jpg" alt="Navan Road Primary Care Centre, Dublin">
-        <img src="assets/images/NewBridgeS.png" alt="Newbridge Primary Care, Co. Kildare">
+        <img src="assets/images/NewbridgeS.jpg" alt="Newbridge Primary Care, Co. Kildare">
         <img src="assets/images/RialtoS.jpg" alt="Rialto Primary Care Centre, Dublin">
-        <img src="assets/images/ShanhillS.png" alt="Shankill Primary Care Centre, Co. Dublin">
+        <img src="assets/images/ShankhillS.jpg" alt="Shankill Primary Care Centre, Co. Dublin">
         <img src="assets/images/TipperaryS.jpg" alt="Tipperary Primary Care Centre, Co. Tipperary">
     </section>
     
-    <footer>
+    <footer>S
        
         <ul class="social-networks">
             <li>
