changes to gallery style

--- a/gallery.html
+++ b/gallery.html
@@ -55,7 +55,7 @@
         <img src="assets/images/TipperaryS.jpg" alt="Tipperary Primary Care Centre, Co. Tipperary">
     </section>
     
-    <footer>S
+    <footer>
        
         <ul class="social-networks">
             <li>
