change to logo add link , changed h1 to h2 in our team

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 
 <body>
     <header>
-        <h1  id="logo"> Axis 365 </h1>
+        <a href="index.html">
+            <h1  id="logo"> Axis 365 </h1>
+        </a>
         <nav>
             <ul id="menu">
                 <li>
@@ -93,20 +95,20 @@
     
     <section id="teamTitle">
         <div>
-            <h1> Our Team </h1>
+            <h2> Our Team </h2>
         </div>
     </section>
   
     <section id="OurTeam">
         <div class="clearfix">
-            <img class="img1"  src="assets/images/JamesBuckleySmall.jpg" >
+            <img class="img1"  src="assets/images/JamesBuckleySmall.jpg" alt="James Buckley">
             <h2>James Buckley </h2>
             <h3>Managing Director</h3>
             <h3><a href="mailto:james.buckley@axis365.ie" style="color: #fafafa;">james.buckley@axis365.ie</a></h3>
             
         </div>
         <div class="clearfix">
-            <img class="img1"  src="assets/images/BrianFrahillSmall.jpg" >
+            <img class="img1"  src="assets/images/BrianFrahillSmall.jpg" alt="Brian Frahill" >
             <h2>Brian Frahill</h2>
             <h3>Operation Director</h3>
             <h3><a href="mailto:brian.frahill@axis365.ie" style="color: #fafafa;">brian.frahill@axis365.ie</a></h3>
