--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,9 @@
 
 <body>
    <header>
-    <h1  id="logo"> Axis 365</h1>
+    <a href="index.html">
+        <h1  id="logo"> Axis 365</h1>
+    </a>
         <nav>
             <ul id="menu">
                 <li>
