--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
     </header>
     
     <section class="form-section">
-        <form class="contact-form" method="POST" action=""https://formdump.codeinstitute.net/">
+        <form class="contact-form" method="POST" action="https://formdump.codeinstitute.net/">
             <h2> Get in touch to learn how we build and service from the ground up! </h2>
             <label for="fname">First Name</label>
             <input id="fname" class="text-input" type="text" name="first_name" required>
